3.0.0 TODO
- check p4a_button sizes when we have a toolbar with buttons with icons and without icons
- implement application level translations
- port sample_i18n to the new translation system
- try to detect the decimal format and use it during formatting
- change p4a_table_col image handling, we've to pass by index.php and not phpthumb.php  
- integrate p4a_base_mask in core and port samples to it
- auto addaction on intercept and implementmethod when the action is a browser action
- implement db_source::setquery, maybe separate db_sources?
- implement db_source::setZendSelect or something like that, maybe separate db_sources? 
- implement p4a_table::addCheckboxCol
- p4a_table action col should also support html (for images)
- remove P4A_Toolbar::getAsString() method with its strange behaviour?
- use LocaleData:getContent($locale, 'week') to read the firstDay of the week when ZF 1.5 will be out
- check if the new yesexpr is right when ZF 1.5 will be out
- implement errors with exceptions
- deprecate and remove p4a_auto_maxlength

2.99.0
- Zend Framework 1.0.3 was added
- Database connection now relies on Zend_DB PDO adapters
- check_configuration.php was ported to Zend_DB to check the database connection
- P4A_DB_Source was ported to Zend_DB (only PDO drivers are used)
- P4A_DB_Source::setFields() syntax was changed, now you must provide only fields from the main table and not from joines ones
- P4A_DB_Source::addJoin() syntax was changed, join type param was dropped and now you have a third param to pass the columns you want to extract from the joined table (default extracts all columns)
- P4A_DB_Source now has many methods to add joins: addJoinCross(), addJoinFull(), addJoinInner(), addJoinLeft(), addJoinNatural(), addJoinRight()
- P4A_I18N does not manage charset anymore, only UTF-8 will be supported from now on
- P4A_I18N numbers format/normalization now relies on Zend_Locale
- P4A_I18N dates format/normalization now relies on Zend_Date and Zend_Locale